--- a/page-home.html
+++ b/page-home.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Ulrich et Simon</title>
 </head>
 <body>
-    
+<!-- Slideshow container -->
+<div class="slideshow-container">
+<!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+        <img src="img1.jpg" style="width:100%">
+        <div class="text">Formation Réalise</div>
+    </div>
+    <div class="my-slides fade">
+        <img src="img2.jpg" style="width:100%">
+        <div class="text">Nouvelles Technologies</div>
+    </div>
+    <div class="mySlides fade">
+        <img src="img3.jpg" style="width:100%">
+        <div class="text">Sport</div>
+    </div>
+    <div class="mySlides fade">
+        <img src="img3.jpg" style="width:100%">
+        <div class="text">Musique</div>
+    </div>
+    <div class="mySlides fade">
+        <img src="img3.jpg" style="width:100%">
+        <div class="text">Nourriture</div>
+    </div>
+    <div class="mySlides fade">
+        <img src="img3.jpg" style="width:100%">
+        <div class="text">Netflix</div>
+    </div>
+
+    <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+</div>
 </body>
 </html>
