body terminer page-netflix

--- a/page-new-technology.html
+++ b/page-new-technology.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <link rel="stylesheet" href="https://youtu.be/XbGs_qK2PQA">
 </body>
 </html>
