page-musique finie

--- a/page-musique.html
+++ b/page-musique.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./page-musique-css.css">
 </head>
 <body>
-    
+    <div id="titre">
+        <h1>
+            La Musique
+        </h1>
+        <img src="./logo-musique.jpeg" alt="">
+    </div>
+    <div id="video1">
+        <video id="eminem" width="400" height="222" controls="controls" src="eminem-rap-god.mp4">Eminem - Rap God (Explicit) [Official Video]</video>
+        <p id="texte1">Le Rap par exemple: Eminem - Rap God (Explicit) [Official Video]</p>
+    </div>
+    <div id="video2">
+        <p id="texte2">Musique Pop par exemple: TONES AND I - DANCE MONKEY (OFFICIAL VIDEO)</p>
+        <video id="dance-monkey" width="400" height="222" controls="controls" src="tones-and-i-dance-monkey.mp4"></video>
+    </div>
+    <div id="video3">
+        <video id="con-calma" width="400" height="222" controls="controls" src="con-calma.mp4"></video>
+        <p id="texte3">La musique latine par exemple: Daddy Yankee & Snow - Con Calma (Vidéo Officielle)</p>
+    </div>
 </body>
 </html>
+
