--- a/page-new-technology.html
+++ b/page-new-technology.html
@@ -4,8 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./ninja-slider2.css.css" rel="stylesheet" type="text/css" />
+    <script src="./ninja-slider2-js.js" type="text/javascript"></script>
+    <style>
+        body {font: normal 0.9em Arial;margin:0;}
+        a {color:#1155CC;}
+        ul li {padding: 10px 0;}
+        header {display:block;padding:60px 0 20px;text-align:center;position:absolute;top:8%;left:8%;z-index:4;}
+        header a {
+            font-family: sans-serif;
+            font-size: 24px;
+            line-height: 24px;
+            padding: 8px 13px 7px;
+            color: #fff;
+            text-decoration:none;
+            transition: color 0.7s;
+        }
+        header a.active {
+            font-weight:bold;
+            width: 24px;
+            height: 24px;
+            padding: 4px;
+            text-align: center;
+            display:inline-block;
+            border-radius: 50%;
+            background: #C00;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <link rel="stylesheet" href="https://youtu.be/XbGs_qK2PQA">
+    <div id="titre">
+        <h1>Les nouvelles Technologies</h1>
+    </div>
+    <!--start-->
+    <div id="ninja-slider">
+        <div class="slider-inner">
+            <ul>
+                <li>
+                    <a class="ns-img" href="https://static.digitecgalaxus.ch/Files/3/7/8/1/3/8/5/4/msi_ventus_PG132-30_NV_product_photo_boxcard.png?impolicy=ProductTileImage&resizeWidth=436&resizeHeight=335&quality=high&cropWidth=436&cropHeight=335"></a>
+                    <div class="caption">Carte graphique comme: MSI GeForce RTX 3080 VENTUS 3X 10G OC</div>
+                </li>
+                <li>
+                    <a class="ns-img" href="./image-ia.jpeg"></a>
+                    <div class="caption">L'intelligence artificielle</div>
+                </li>
+                <li>
+                    <a class="ns-img" href="https://static.digitecgalaxus.ch/Files/2/0/9/2/3/1/6/5/null-N-005.xxl3.jpg?impolicy=ProductTileImage&resizeWidth=436&resizeHeight=335&quality=high&cropWidth=436&cropHeight=335"></a>
+                    <div class="caption">Les Téléviseurs comme: Samsung QE98Q950R
+                        98", 8K, QLED, 2019</div>
+                </li>
+                <li>
+                    <a class="ns-img" href="https://static.digitecgalaxus.ch/Files/3/8/8/3/2/2/2/2/Samsung_Note20-Ultra-5G_mystic-black.jpg?impolicy=ProductTileImage&resizeWidth=436&resizeHeight=335&quality=high&cropWidth=436&cropHeight=335"></a>
+                    <div class="caption">Les smartphones comme: Samsung Galaxy Note 20 Ultra</div>
+                </li>
+            </ul>
+            <div class="navsWrapper">
+                <div id="ninja-slider-prev"></div>
+                <div id="ninja-slider-next"></div>
+            </div>
+        </div>
+    </div> 
 </body>
 </html>
