avancer sur page realise

--- a/page-formation-realise.html
+++ b/page-formation-realise.html
@@ -2,10 +2,37 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="realise.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>Portfolio de Ulrich et Simon - Formation Réalise</title>
 </head>
 <body>
-    
+    <div>
+        <img src="https://realise.ch/img/logo3.jpg" class="logo">
+        <h1>Formation Réalise</h1>
+    </div>
+<!-- flexible grid (content) -->
+<section>
+    <div class="row">
+        <div class="left-side">
+            <h2>Simon</h2>
+            <img src="simon.jpg">
+            <p>Je me suis inscrit à cette formation car je veux approfondir mes connaissances en tant que web-développeur</p>
+        </div>
+        <div class="right-side">
+            <h2>Ulrich</h2>
+            <img src="profil.jpg">
+            <p>.............</p>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="flex-container">
+        <div class="flex-item-left"><img src="profil.jpg"><br>Marco</div>
+        <div class="flex-item-center"><img src="profil.jpg"><br>Julien</div>
+        <div class="flex-item-right"><img src="profil.jpg"><br>Fred</div>
+    </div>
+</section>
 </body>
 </html>
