--- a/page-sport.html
+++ b/page-sport.html
@@ -2,10 +2,25 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="page-nourriture.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>Portfolio de Ulrich et Simon - Sports</title>
 </head>
 <body>
-    
+<h1>Sports</h1>
+<!-- flexible grid (content) -->
+<div class="row">
+    <div class="side-left">
+        <h2><img src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/205e4861-a009-4043-8200-c96cc9015837/801x410_gettyimages-897635346.jpg">
+            Footbal</h2>
+        <h2><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ_60fW-5sxtMqaOJ7YMM7tIU120hlW9pawtw&usqp=CAU">
+            Natation</h2>
+    </div>
+    <div class="main-right">
+        <h2>Ping-pong<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQAfvK4WRcCdj_MUzur9wiiBOAsE6Qwk2z5eA&usqp=CAU">
+        </h2>
+    </div>
+</div>
 </body>
 </html>
